<resources>
    <string name="app_name">GymLog</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_program_active">Активная тренировка</string>
    <string name="nav_program_list">Тренировки</string>
    <string name="nav_exercise">Упражнения</string>
    <string name="nav_measure">Замеры</string>
    <string name="nav_calendar">Календарь</string>
    <string name="nav_graph">Графики</string>

    <string name="meter">м</string>
    <string name="centimeter">см</string>
    <string name="kilometer">км</string>
    <string name="kilogram">кг</string>
    <string name="second">сек</string>
    <string name="program_list">Список тренировок</string>
    <string name="program_list_empty">Список тренировок пуст</string>
    <string name="program_name">Название тренировки</string>
    <string name="day_name">Название дня</string>
    <string name="target_muscle">Целевая мышца:</string>
    <string name="ok">OK</string>
    <string name="empty_day_list">Список дней пуст</string>
    <string name="empty_exercise_list">Список упражнений пуст</string>
    <string name="empty_approach_list">Список подходов пуст</string>
    <string name="edit">Редатировать</string>
    <string name="remove">Удалить</string>
    <string name="program_active">Активная тренировка</string>
    <string name="program_not_activate">Активная тренировка не выбрана. Перейдите в Список тренировок и активируте тренировку</string>
    <string name="cancel">Отменить</string>
    <string name="finish_exercise">Завершить</string>
    <string name="graph">Графики</string>
    <string name="calendar">Календарь</string>
    <string name="exercise_result">Результат упражнения</string>
    <string name="exercise_how_hard">Как тяжело было выполнить упражение?</string>
    <string name="hard">Тяжело</string>
    <string name="normal">Нормально</string>
    <string name="easy">Легко</string>
    <string name="level">Сложность</string>

    <string-array name="month_name">
        <item>Января</item>
        <item>Февраля</item>
        <item>Марта</item>
        <item>Фпреля</item>
        <item>Мая</item>
        <item>Июня</item>
        <item>Июля</item>
        <item>Августа</item>
        <item>Сентября</item>
        <item>Октября</item>
        <item>Ноября</item>
        <item>Декабря</item>
    </string-array>

    <string-array name="level">
        <item>Простая</item>
        <item>Средняя</item>
        <item>Высокая</item>
    </string-array>
</resources>
