<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_program_active"
            android:icon="@drawable/ic_nav_program_active"
            android:title="@string/nav_program_active" />
        <item
            android:id="@+id/nav_program_list"
            android:icon="@drawable/ic_nav_program_list"
            android:title="@string/nav_program_list" />
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_nav_exercise"
            android:title="@string/nav_exercise" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_nav_calendar"
            android:title="@string/nav_calendar" />
        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/ic_nav_graph"
            android:title="@string/nav_graph" />
    </group>
</menu>
